changed to relative path

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <title>pull-to-refresh</title>
-    <link href="/static/app.84f85ffa60397119d506c65c7a2a1148.css" rel="stylesheet">
+    <link href="static/app.84f85ffa60397119d506c65c7a2a1148.css" rel="stylesheet">
   </head>
   <body>
     <app></app>
-    <script src="/static/app.60b213acb2d5dd5965ee.js"></script>
+    <script src="static/app.60b213acb2d5dd5965ee.js"></script>
   </body>
 </html>
